# uds

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_LOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/agents/: implementer.md  reviewer.md
.github/copilot/: setup-steps.yml
.github/workflows/: ci.yml  release.yml
design/: 00-Design_Overview.md  01-System_Requirements_Specification.md  02-System_Architecture_Design.md  03-UDS_Protocol_Design.md  04-Bootloader_and_Flash_Design.md  05-Virtual_CAN_Platform_Design.md  06-Technology_Stack.md  07-Project_Structure.md  08-Interface_and_Integration_Design.md  09-Testing_Strategy.md  10-Development_Roadmap.md
src/: CMakeLists.txt
src/bootloader/: CMakeLists.txt  flash.c  flash_services.c
src/can/: CMakeLists.txt  can_socket.c
src/core/: CMakeLists.txt  data.c  dtc.c  nrc.c  routine_control.c  security.c  session.c
src/ecusim/: CMakeLists.txt  ecusim.c  ecusim.h  main.c
src/include/: uds_can.h  uds_core.h  uds_data.h  uds_dtc.h  uds_flash.h  uds_nrc.h  uds_routine.h  uds_tp.h
src/tp/: CMakeLists.txt  iso_tp.c
tests/: CMakeLists.txt  test_uds_data.py  test_uds_nrc.py  test_uds_security.py  test_uds_session.py  test_uds_transport.py
tests/integration/: __init__.py  conftest.py  test_flash_performance.py  test_multi_ecu.py  test_session_integration.py  test_uds_services_integration.py
tests/unit/: CMakeLists.txt  test_can_socket.c  test_data.c  test_dtc.c  test_flash.c  test_iso_tp.c  test_security.c  test_session.c
tools/: diag_cli.py  flash_tool.py
tools/uds/: __init__.py  client.py  data.py  dtc.py  ecusim.py  exceptions.py  flash.py  nrc.py  security.py  session.py  transport.py
